# parlaylib

./: .travis.yml  CMakeLists.txt  _config.yml  index.md  installation.md
.github/workflows/: build.yml
algorithms/: primitives.md
datatypes/: delayed_sequence.md
include/parlay/: BUILD  alloc.h  delayed_sequence.h  hash_table.h  parallel.h  parallel_io.h  primitives.h  random.h  scheduler.h  sequence.h  slice.h  string_basics.h  utilities.h
include/parlay/internal/: BUILD  block_allocator.h  bucket_sort.h  collect_reduce.h  counting_sort.h  group_by.h  integer_sort.h  sample_sort.h  sequence_base.h  sequence_ops.h  shuffle.h  stream_delayed.h  transpose.h
include/parlay/internal/posix/: BUILD
include/parlay/internal/scheduler_plugins/: BUILD  cilkplus.h  opencilk.h  tbb.h
include/parlay/internal/windows/: BUILD
test/: CMakeLists.txt  test_allocator.cpp  test_counting_sort.cpp  test_range.cpp  test_sequence.cpp
timings/: makefile  time_operations.h  time_tests.cpp
